--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,9 +3,10 @@
     <head>
         <title>Superhero Gallery</title>
         <meta charset="utf-8" />
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     </head>
     <body>
-        <div class="entry-point">
+        <div class="site-wrapper">
         </div>
     </body>
 </html>
