--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     </head>
     <body>
-        <div class="site-wrapper">
+        <div class="container">
         </div>
     </body>
 </html>
