--- a/src/scss/partials/_grid.scss
+++ b/src/scss/partials/_grid.scss
@@ -2,16 +2,53 @@
     display: block;
     width: 100%;
     max-width: 1290px;
-    padding-right: 15px; 
-    padding-left: 15px; 
+    padding-right: 30px;
+    padding-left: 30px;
     margin: 0 auto;
 }
-
 .block {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
-
 .centered {
     text-align: center;
+}
+.column-1 {
+    width: 8.33333%;
+}
+.column-2 {
+    width: 16.66667%;
+}
+.column-3 {
+    width: 25%;
+}
+.column-4 {
+    width: 33.33333%;
+}
+.column-5 {
+    width: 41.66667%;
+}
+.column-6 {
+    width: 50%;
+}
+.column-7 {
+    width: 58.33333%;
+}
+.column-8 {
+    width: 66.66667%;
+}
+.column-9 {
+    width: 75%;
+}
+.column-10 {
+    width: 83.33333%;
+}
+.column-11 {
+    width: 91.66667%;
+}
+.column-12 {
+    width: 100%;
+}
+[class*="column"] {
+    padding: 10px;
 }
