--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,23 @@
 @import "./vendor/index";
 @import "./partials/index";
 @import "./modules/index";
-
 * {
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Ubuntu', sans-serif;
     background-color: $color-off-white;
+}
+.loader-container {
+    .loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 30px;
+        width: 30px;
+        border: 4px solid #ccc;
+        border-radius: 100%;
+        border-left-color: #011627;
+        animation: spin 1s linear infinite;
+    }
 }
