--- a/src/scss/partials/_grid.scss
+++ b/src/scss/partials/_grid.scss
@@ -7,13 +7,13 @@
     margin: 0 auto;
 }
 .block {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 25px;
+    padding-bottom: 30px;
+    position: relative;
+    min-height: 300px;
 }
-.centered {
-    text-align: center;
-}
-.column-1 {
+
+.medium-1 {
     width: 8.33333%;
 }
 .column-2 {
@@ -49,8 +49,47 @@
 .column-12 {
     width: 100%;
 }
-@media screen and (min-width: $large) {
+@media screen and (min-width: $small) {
     [class*="column"] {
         padding: 5px;
+    }
+}
+
+@media screen and (min-width: $medium) {
+    .medium-1 {
+        width: 8.33333%;
+    }
+    .medium-2 {
+        width: 16.66667%;
+    }
+    .medium-3 {
+        width: 25%;
+    }
+    .medium-4 {
+        width: 33.33333%;
+    }
+    .medium-5 {
+        width: 41.66667%;
+    }
+    .medium-6 {
+        width: 50%;
+    }
+    .medium-7 {
+        width: 58.33333%;
+    }
+    .medium-8 {
+        width: 66.66667%;
+    }
+    .medium-9 {
+        width: 75%;
+    }
+    .medium-10 {
+        width: 83.33333%;
+    }
+    .medium-11 {
+        width: 91.66667%;
+    }
+    .medium-12 {
+        width: 100%;
     }
 }
