search bar markup added.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@ body {
     background-color: $color-off-white;
 }
 .loader-container {
+    min-height: 300px;
     .loader {
         position: absolute;
         top: 50%;
