--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -2,11 +2,11 @@
 $mastricht-blue: #011627;
 $bright-yellow: #FFDC1C;
 $color-off-white: #f5f4f1;
-
+$color-green: #02C39A;
 $color-white: #fff;
-
 /* Media queries */
 $small: 640px;
 $medium: 768px;
 $large: 1025px;
 $xlarge: 1200px;
+$text-color: #333;
